--- a/index.html
+++ b/index.html
@@ -64,31 +64,49 @@
             <p class="section-subtitle">Comprehensive AI solutions tailored to your business needs</p>
             <div class="services-grid">
                 <div class="service-card">
+                    <div class="service-image">
+                        <img src="https://images.pexels.com/photos/8386440/pexels-photo-8386440.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Computer Vision AI" loading="lazy">
+                    </div>
                     <div class="service-icon">🤖</div>
-                    <h3>Generative AI</h3>
-                    <p>Advanced content generation, creative AI solutions, and automated content creation systems.</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">🧠</div>
-                    <h3>Large Language Models</h3>
-                    <p>Custom LLM implementations, fine-tuning, and integration for enterprise applications.</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">📊</div>
-                    <h3>Big Data Science</h3>
-                    <p>Data analytics, predictive modeling, and insights extraction from complex datasets.</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">🔍</div>
                     <h3>Computer Vision</h3>
-                    <p>Image recognition, object detection, and visual AI solutions for various industries.</p>
+                    <p>Advanced image recognition, object detection, and visual AI solutions for automated quality control and surveillance systems.</p>
                 </div>
                 <div class="service-card">
+                    <div class="service-image">
+                        <img src="https://images.pexels.com/photos/8386434/pexels-photo-8386434.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Natural Language Processing" loading="lazy">
+                    </div>
+                    <div class="service-icon">🧠</div>
+                    <h3>Natural Language Processing</h3>
+                    <p>Advanced text analysis, sentiment detection, language translation, and conversational AI systems for customer service automation.</p>
+                </div>
+                <div class="service-card">
+                    <div class="service-image">
+                        <img src="https://images.pexels.com/photos/8386422/pexels-photo-8386422.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Image Segmentation" loading="lazy">
+                    </div>
+                    <div class="service-icon">📊</div>
+                    <h3>Image Segmentation</h3>
+                    <p>Precise pixel-level image analysis for medical imaging, autonomous vehicles, and industrial inspection applications.</p>
+                </div>
+                <div class="service-card">
+                    <div class="service-image">
+                        <img src="https://images.pexels.com/photos/8386423/pexels-photo-8386423.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Named Entity Recognition" loading="lazy">
+                    </div>
+                    <div class="service-icon">🔍</div>
+                    <h3>Named Entity Recognition</h3>
+                    <p>Intelligent extraction of entities from unstructured text data for document processing and information management systems.</p>
+                </div>
+                <div class="service-card">
+                    <div class="service-image">
+                        <img src="https://images.pexels.com/photos/8386421/pexels-photo-8386421.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Machine Learning Models" loading="lazy">
+                    </div>
                     <div class="service-icon">🎯</div>
                     <h3>Machine Learning</h3>
                     <p>Custom ML models, algorithm development, and intelligent automation systems.</p>
                 </div>
                 <div class="service-card">
+                    <div class="service-image">
+                        <img src="https://images.pexels.com/photos/8386425/pexels-photo-8386425.jpeg?auto=compress&cs=tinysrgb&w=800" alt="AI Automation" loading="lazy">
+                    </div>
                     <div class="service-icon">⚡</div>
                     <h3>AI Automation</h3>
                     <p>Process automation, intelligent workflows, and AI-powered business optimization.</p>
@@ -144,6 +162,9 @@
             <p class="section-subtitle">Real results from our AI implementations</p>
             <div class="case-studies-grid">
                 <div class="case-study-card">
+                    <div class="case-study-image">
+                        <img src="https://images.pexels.com/photos/6801648/pexels-photo-6801648.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Financial Fraud Detection System" loading="lazy">
+                    </div>
                     <div class="case-study-header">
                         <h3>Financial Fraud Detection</h3>
                         <span class="case-study-tag">Machine Learning</span>
@@ -161,6 +182,9 @@
                     </div>
                 </div>
                 <div class="case-study-card">
+                    <div class="case-study-image">
+                        <img src="https://images.pexels.com/photos/3184465/pexels-photo-3184465.jpeg?auto=compress&cs=tinysrgb&w=800" alt="HR Operations Automation" loading="lazy">
+                    </div>
                     <div class="case-study-header">
                         <h3>HR Operations Automation</h3>
                         <span class="case-study-tag">Generative AI</span>
@@ -178,6 +202,9 @@
                     </div>
                 </div>
                 <div class="case-study-card">
+                    <div class="case-study-image">
+                        <img src="https://images.pexels.com/photos/8386440/pexels-photo-8386440.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Customer Support AI Chatbot" loading="lazy">
+                    </div>
                     <div class="case-study-header">
                         <h3>Customer Support AI</h3>
                         <span class="case-study-tag">NLP</span>
