--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
                     <div class="service-image">
                         <img src="https://images.pexels.com/photos/8386440/pexels-photo-8386440.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Computer Vision AI" loading="lazy">
                     </div>
-                    <div class="service-icon">🤖</div>
                     <h3>Computer Vision</h3>
                     <p>Advanced image recognition, object detection, and visual AI solutions for automated quality control and surveillance systems.</p>
                 </div>
@@ -76,7 +75,6 @@
                     <div class="service-image">
                         <img src="https://images.pexels.com/photos/8386434/pexels-photo-8386434.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Natural Language Processing" loading="lazy">
                     </div>
-                    <div class="service-icon">🧠</div>
                     <h3>Natural Language Processing</h3>
                     <p>Advanced text analysis, sentiment detection, language translation, and conversational AI systems for customer service automation.</p>
                 </div>
@@ -84,7 +82,6 @@
                     <div class="service-image">
                         <img src="https://images.pexels.com/photos/8386422/pexels-photo-8386422.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Image Segmentation" loading="lazy">
                     </div>
-                    <div class="service-icon">📊</div>
                     <h3>Image Segmentation</h3>
                     <p>Precise pixel-level image analysis for medical imaging, autonomous vehicles, and industrial inspection applications.</p>
                 </div>
@@ -92,7 +89,6 @@
                     <div class="service-image">
                         <img src="https://images.pexels.com/photos/8386423/pexels-photo-8386423.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Named Entity Recognition" loading="lazy">
                     </div>
-                    <div class="service-icon">🔍</div>
                     <h3>Named Entity Recognition</h3>
                     <p>Intelligent extraction of entities from unstructured text data for document processing and information management systems.</p>
                 </div>
@@ -100,7 +96,6 @@
                     <div class="service-image">
                         <img src="https://images.pexels.com/photos/8386421/pexels-photo-8386421.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Machine Learning Models" loading="lazy">
                     </div>
-                    <div class="service-icon">🎯</div>
                     <h3>Machine Learning</h3>
                     <p>Custom ML models, algorithm development, and intelligent automation systems.</p>
                 </div>
@@ -108,7 +103,6 @@
                     <div class="service-image">
                         <img src="https://images.pexels.com/photos/8386425/pexels-photo-8386425.jpeg?auto=compress&cs=tinysrgb&w=800" alt="AI Automation" loading="lazy">
                     </div>
-                    <div class="service-icon">⚡</div>
                     <h3>AI Automation</h3>
                     <p>Process automation, intelligent workflows, and AI-powered business optimization.</p>
                 </div>
@@ -239,11 +233,11 @@
                     </div>
                     <div class="contact-item">
                         <h4>Phone</h4>
-                        <p>+1 (555) 123-4567</p>
+                        <p>+92  315 5421525</p>
                     </div>
                     <div class="contact-item">
                         <h4>Location</h4>
-                        <p>San Francisco, CA</p>
+                        <p>Lahore, Punjab Pakistan</p>
                     </div>
                 </div>
                 <form class="contact-form" id="contact-form">
