--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="https://images.pexels.com/photos/8386440/pexels-photo-8386440.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Computer Vision AI" loading="lazy">
+                        <video class="service-video" src="videos/computerVision.mp4" controls preload="metadata" aria-label="Computer Vision demo video">
+                            Sorry, your browser doesn't support embedded videos.
+                        </video>
                     </div>
                     <h3>Computer Vision</h3>
                     <p>Advanced image recognition, object detection, and visual AI solutions for automated quality control and surveillance systems.</p>
