--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
             <p class="section-subtitle">Comprehensive AI solutions tailored to your business needs</p>
             <div class="services-grid">
                 <div class="service-card">
-                    <div class="service-image">
-                        <video class="service-video" src="videos/computerVision.mp4" controls preload="metadata" aria-label="Computer Vision demo video">
-                            Sorry, your browser doesn't support embedded videos.
-                        </video>
-                    </div>
+                            <div class="service-image">
+                                <video class="service-video" src="videos/computerVision.mp4" muted playsinline preload="metadata" aria-label="Computer Vision demo video">
+                                    Sorry, your browser doesn't support embedded videos.
+                                </video>
+                            </div>
                     <h3>Computer Vision</h3>
                     <p>Advanced image recognition, object detection, and visual AI solutions for automated quality control and surveillance systems.</p>
                 </div>
@@ -299,5 +299,6 @@
     </footer>
 
     <script src="js/main.js"></script>
+    <script src="js/video-hover.js"></script>
 </body>
 </html>
